
Current Development Version: WSPR-4.0


2014-04-05 Greg Beam <ki7mt@yahoo.com>

* Removed AX_ISC_POSIX, was for obsolete hardware
* Combined Makefile.in ieq statments
* Added AC_CANONICAL_HOST for $host_os
* Removed duplicate flags from Makefile.in


2014-04-04 (2)  Greg Beam <ki7mt@yahoo.com>

* ran autoscan and updated configure.ac
* Added FFTW AC_CHECK_LIB
* Added Samplerate AC_CHECK_LIB
* Updated header checks
* Removed uneeded header check
* Updated distclean to include files / folders created at runtime
* Added MALLOC and FUNCTONS checks
* Added conditional -fPIC -m64 for Darwin, -fPIC for else.
* Built and ran from clean build, no errors, only a few unused var warnings.


2014-04-04 (1)  Greg Beam <ki7mt@yahoo.com>

* Updated aclocal.m4 to search alternative for portaudio paths.
* Removed alternative path search from configure.ac
* Add sanity tests back in now that aclocal.m4 has better search paths
* Minor Makefile.in edits


2014-04-03  Greg Beam <ki7mt@yahoo.com>

* Added John's (G4KLA) Mac Install notes to INSTALL
* Moved Makefile.CVF to /archive (its using Python2.3)
* Moved Makefile.MinGW to /archive (using Py27 and hard codes)
* Moved Makefile.MinGW.gfortran to /archive (using Py27 and hard codes)
* Moved LICENSE.TXT to /archive, have COPYING and COPYRIGHT /wspr
* Added header checks for Portaudio19, Samplerate and FFTW3. If not found
  configure breaks, and suggests installing the dev packages.
* Added more -I and -L search paths to find required libs and directories.
* Added  John's (G4KLA) suggestion -m64 to FFLAGS on configure.ac
* Consolidated configure.ac and Makefile.in FFLAGS
* Trying a fix for w.-cpython-3*.so changed to ${MV} w.*.so WsprMod/w.so


2014-04-02  Greg Beam <ki7mt@yahoo.com>

* Updated wspr.py copyright dates (2008-2014)
* Updated Project Source URL's
* Added autotool scripts to build-aux (config.guess, sub, missing etc)
* Updated configure.ac to includ wspr/build-aux dir