@@ -8,7 +8,7 @@ fail=0
 
 AC_CONFIG_AUX_DIR([build-aux])
 AC_PREFIX_DEFAULT(/usr/local/)
-
+AC_CANONICAL_HOST
 # Checks for programs.
 AC_PROG_CC
 AC_LANG([C])
@@ -16,13 +16,27 @@ AC_PROG_CXX
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_USE_SYSTEM_EXTENSIONS
-AC_CANONICAL_HOST
+
+dnl test for lib locations
+if test -d /usr/local/lib ; then
+	LDFLAGS="-L/usr/local/lib ${LDFLAGS}"
+fi
+
+dnl test for lib locations
+if test -d /lib ; then
+		LDFLAGS="-L/lib ${LDFLAGS}"
+fi
+
+dnl test for lib locations
+if test -d /usr/lib ; then
+	LDFLAGS="-L/usr/lib ${LDFLAGS}"
+fi
 
 dnl Updated aclocal.m4 to find search alternative locations. Libs are only
 dnl added is aclocal.m4 finds them.
 CFLAGS="-Wall -O0"
 CPPFLAGS="-I/usr/include -I/usr/local/include ${CPPFLAGS}"
-LDFLAGS="-L/usr/lib ${LDFLAGS}"
+LDFLAGS="${LDFLAGS}"
 LIBS="-lpthread ${LIBS}"
 
 dnl Check which fortran - macro from aclocal.m4
@@ -61,10 +75,6 @@ dnl "gcc -O9 -O2" will result in -O2 getting preference.  How stupid.
 if test ! -z "$CFLAGS"; then
 	CFLAGS="$CFLAGS"
 fi
-
-
-dnl this macro is missing or at least I can't find it.
-AC_ISC_POSIX
 
 dnl standard m4 checkes
 AC_C_INLINE
@@ -136,11 +146,9 @@ if test "$prefix" = "NONE"; then
 	prefix=${ac_default_prefix}
 else
 
-dnl Don't get bitten by Cygwin's stupidity if the user specified
-dnl a custom prefix with a trailing slash
-
-	prefix=`echo $prefix | sed 's/\/$//'`
-	AC_DEFINE_UNQUOTED(PREFIX, "$prefix", [Prefix where wsjt is installed.])
+dnl remove trainling slash if present "/"
+prefix=`echo ${prefix%/}`
+AC_DEFINE_UNQUOTED(PREFIX, "$prefix", [Prefix where WSPR is installed.])
 	
 fi
 
@@ -149,7 +157,7 @@ dnl =============
 
 if test -z $FC ; then
 	fail=1
-	echo "You need g95 or gfortran to compile this program!"
+	echo "You need gfortran to compile this program!"
 fi
 
 dnl test smaplerate
@@ -208,16 +216,20 @@ if test $HAS_PORTAUDIO -eq "1"; then
 dnl We couldn't find portadio, the libs failed or it's the wrong version
 else
 	fail=1
+	echo
 	echo "Portaudio-v19 is required by $PACKAGE_NAME $"
 	echo
-	echo "Standard locations were checked. If you have"
-	echo "Portaudio installed in a non-standard location,"
-	echo "add the following to ./configure:"
-	echo "--with-portaudio-include-dir=/path/to/pa"
-	echo "--with-portaudio-lib-dir=/path/to/pa/libs"
+	echo "Standard locations were checked, and not found."
 	echo
-	echo "Then re-run ./configure"
+	echo "Possible Solutions:"
+	echo "[1] Install your distro Version of: portaudio19-dev"
+	echo "[2] Build portaudio from source, install to: /usr/local"
+	echo "[3] Confiure with portaudio non-standard paths:"
 	echo
+	echo './configure --with-portaudio-include-dir=/path/to/portaudio.h \'
+	echo '--with-portaudio-lib-dir=/path/to/pa/libs'
+	echo
+	
 fi
 
 dnl This needs work, how to select python3, pyhton27 f2py or f2py3??
@@ -226,15 +238,8 @@ dnl For now, should specify:
 dnl F2PY=/path/to/f2py3
 dnl or add f2py3 to svn
 if test "$F2PY" = ""; then
-	echo "You are missing f2py, trying local copy."
-	F2PY="f2py";	
-fi
-
-dnl
-dnl If fail a pre-requisite then fail
-dnl
-if test $fail -eq 1; then
-	AC_MSG_ERROR([Please check error messages and install missing packages.])
+	echo "You are missing f2py3, trying local copy."
+	F2PY="f2py3"
 fi
 
 dnl 
